Closed
Bug 363933
Opened 19 years ago
Closed 19 years ago
[reflow branch] Horizontal overflow events are not dispatched anymore
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: martijn.martijn, Assigned: MatsPalmgren_bugz)
References
()
Details
(Keywords: regression, testcase)
Attachments
(1 file)
|
1.37 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
See url testcase.
When clicking on the "Set long string" button, an "1. overflow" text should appear at the bottom of the page.
This is not happening anymore with current trunk builds.
This regressed between 2006-12-07 and 2006-12-08, very likely a regression from the reflow branch landing.
The overflow event is still dispatched for vertical overflows (which is what the second button on the testcase is testing), so that has not regressed.
| Assignee | ||
Updated•19 years ago
|
OS: Windows XP → All
Summary: Horizontal overflow events are not dispatched anymore → [reflow branch] Horizontal overflow events are not dispatched anymore
| Assignee | ||
Comment 1•19 years ago
|
||
This fixes it for me. It seems that frame->GetSize() has changed from
being overflow rect to content rect by the reflow branch landing?
nsIFrame::GetSize in general is the border rect, not the content rect.
But I thought I made the change you describe (to the sizing of the rect inside the scroll frame) back in bug 192767. Maybe we're thinking of different frames, though.
That said, this patch seems correct.
| Assignee | ||
Comment 4•19 years ago
|
||
Comment on attachment 248788 [details] [diff] [review]
fix?
(In reply to comment #2)
> nsIFrame::GetSize in general is the border rect, not the content rect.
Right, that was what I meant.
Attachment #248788 -
Flags: superreview?(dbaron)
Attachment #248788 -
Flags: review?(dbaron)
| Assignee | ||
Updated•19 years ago
|
Assignee: nobody → mats.palmgren
Comment on attachment 248788 [details] [diff] [review]
fix?
r+sr=dbaron
Attachment #248788 -
Flags: superreview?(dbaron)
Attachment #248788 -
Flags: superreview+
Attachment #248788 -
Flags: review?(dbaron)
Attachment #248788 -
Flags: review+
| Assignee | ||
Comment 6•19 years ago
|
||
Checked in to trunk at 2006-12-19 17:17 PST
-> FIXED
Status: NEW → RESOLVED
Closed: 19 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•