Horizontal under/overflow events are not dispatched. b=363933 r+sr=dbaron